Refactor ExerciseSlide → ExerciseBlock

--- a/src/uLearn.Web/Views/Course/SlideHtml.cshtml
+++ b/src/uLearn.Web/Views/Course/SlideHtml.cshtml
@@ -1,17 +1,18 @@
-﻿@* Generator: MvcHelper GeneratePrettyNames: true *@
-@using uLearn
+﻿@* Generator: MvcHelper GeneratePrettyNames: true DisableLinePragmas: true *@
+@using uLearn;
+@using uLearn.Web.Models;
 
-@helper Slide(Slide slide, int currentScore = 0)
+@helper Slide(BlockRenderContext context, int currentScore = 0)
 {
 	<div class='slide'>
 		<h1>
-			@slide.Title
-			<span class="score">@Score(currentScore, slide.MaxScore)</span>
+			@context.Slide.Title
+			<span class="score">@Score(currentScore, context.Slide.MaxScore)</span>
 		</h1>
 
-		@foreach (var block in slide.Blocks)
+		@foreach (var block in context.Slide.Blocks)
 		{
-			@Block((dynamic)block, slide)
+			@Block((dynamic)block, context)
 		}
 	</div>
 }
@@ -21,17 +22,17 @@
 	@(maxScore == 0 ? "" : string.Format("{0}/{1}", currentScore, maxScore))
 }
 
-@helper Block(MdBlock block, Slide slide)
+@helper Block(MdBlock block, BlockRenderContext context)
 {
-	@MvcHtmlString.Create(block.Markdown.RenderMd(slide.Info.SlideFile))
+	@MvcHtmlString.Create(block.Markdown.RenderMd(context.BaseUrl))
 }
 
-@helper Block(CodeBlock block, Slide slide)
+@helper Block(CodeBlock block, BlockRenderContext context)
 {
 	<textarea class='code code-sample' data-lang="@block.Lang" data-ver="@block.Version">@block.Code</textarea>
 }
 
-@helper Block(TexBlock block, Slide slide)
+@helper Block(TexBlock block, BlockRenderContext context)
 {
 	foreach (var texLine in block.TexLines)
 	{
@@ -39,10 +40,10 @@
 	}
 }
 
-@helper Block(YoutubeBlock block, Slide slide)
+@helper Block(YoutubeBlock block, BlockRenderContext context)
 {
 	<div class="video-container">
-		<iframe class='embedded-video' width='864' height='480' src='//www.youtube.com/embed/@block.VideoId' allowfullscreen></iframe>
+		<iframe class='embedded-video' width='864' height='480' src='https://www.youtube.com/embed/@block.VideoId' allowfullscreen></iframe>
 	</div>
 	<div>
 		<a href="javascript://" class="popover-trigger"
@@ -51,16 +52,123 @@
 	</div>
 }
 
-@helper Block(ImageGaleryBlock block, Slide slide)
+@helper Block(ImageGaleryBlock block, BlockRenderContext context)
 {
 	<div class="flexslider">
 		<ul class="slides">
 			@foreach (var imageUrl in block.ImageUrls)
 			{
 				<li>
-					<img src="@string.Format("{0}/{1}", slide.Info.DirectoryRelativePath, imageUrl)" alt="@imageUrl" />
+					<img src="@string.Format("{0}/{1}", context.BaseUrl, imageUrl)" alt="@imageUrl" />
 				</li>
 			}
 		</ul>
 	</div>
+}
+
+@helper Block(ExerciseBlock block, BlockRenderContext context)
+{
+	ExerciseBlockData data = context.GetBlockData(block) ?? new ExerciseBlockData();
+	var action = data.CanSkip ? "$('#ShowSolutionsAlert').modal('show')" : string.Format("window.location='{0}'", data.AcceptedSolutionUrl);
+	<textarea id="secretCodeExercise" class='hide'>@block.ExerciseInitialCode.EnsureEnoughLines(4))</textarea>
+	<div class="sphere-engine-tm">Powered by <a target="blank" href="http://sphere-engine.com">Sphere Engine™</a> and <a target="blank" href="http://codemirror.net/">CodeMirror</a></div>
+	<textarea class='code code-exercise' data-lang="@block.Lang">@(data.LatestAcceptedSolution ?? block.ExerciseInitialCode.EnsureEnoughLines(4))</textarea>
+	<script>
+		function cleanUserCode() {
+			var $secretCodeExercise = $('#secretCodeExercise');
+			$('.code-exercise')[0].codeMirrorEditor.setValue($secretCodeExercise.text());
+		}
+	</script>
+	if (data.ShowControls)
+	{
+		<div class="solution-control btn-group ctrl-group">
+			<button type="button" class="run-solution-button btn btn-primary no-rounds" data-url="@data.RunSolutionUrl">
+				Run
+			</button>
+
+			@{ var e = ((ExerciseSlide)context.Slide).Exercise.HintsMd; }
+			<button id="GetHintButton" type="button" class="btn btn-default hints-btn" onclick="showHintForUser('@context.Course.Id', '@context.Slide.Index' , '@e.Count')" data-url="@data.GetHintUrl">
+				Get hint
+			</button>
+
+			<button type="button" class="btn btn-default giveup-btn" onclick="@action">
+				Show solutions
+			</button>
+
+			<button type="button" class="btn btn-default reset-btn no-rounds" onclick="cleanUserCode()">
+				Reset
+			</button>
+		</div>
+
+
+		<div class="run-result run-service-error">
+			<div class="run-verdict label-warning">Ошибка сервера :(</div>
+			<pre class="no-rounds"><code class="run-details"></code></pre>
+		</div>
+
+		<div class="run-result run-compile-error">
+			<div class="run-verdict label-danger">Ошибка компиляции</div>
+			<pre class="no-rounds"><code class="run-details"></code></pre>
+		</div>
+
+		<div class="run-result run-style-error">
+			<div class="run-verdict label-danger">Нарушение стилевых требований</div>
+			<pre class="no-rounds"><code class="run-details"></code></pre>
+			<div>
+				<small>В некоторых ситуациях стилевые проверки тут могут быть жестче, чем необходимо в реальной жизни.</small>
+			</div>
+		</div>
+
+		<div class="run-result run-wa">
+			<div class="run-verdict label-danger">Неверный результат</div>
+			<div class="diff-table tablesorter"></div>
+		</div>
+
+		<div class="run-result run-wa-no-diff">
+			<div class="run-verdict label-danger">Неверный результат</div>
+			<pre class="no-rounds"><code class="run-details"></code></pre>
+		</div>
+
+		<div class="run-result run-success">
+			<div class="run-verdict label-success clearfix">Успех!</div>
+			<pre class="no-rounds"><code class="run-details"></code></pre>
+		</div>
+
+		<div class="panel-group ctrl-group" id="hints-accordion">
+			<div id="hints-place"></div>
+		</div>
+
+		<div class="modal fade" id="ShowSolutionsAlert" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+						<h4 class="modal-title">Внимание</h4>
+					</div>
+					<div class="modal-body">
+						<p>Вы потеряете возможность получить баллы за эту задачу, если продолжите.</p>
+					</div>
+					<div class="modal-footer">
+						<a class="btn btn-default" href="@data.AcceptedSolutionUrl">Продолжить</a>
+						<button type="button" class="btn btn-primary" data-dismiss="modal">Отмена</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	}
+	else
+	{
+		<div>
+			<h3>Подсказки</h3>
+			<ol>
+				@foreach (var hint in block.HintsMd)
+				{
+					<li>
+						@MvcHtmlString.Create(hint.RenderMd(context.BaseUrl))
+					</li>
+				}
+			</ol>
+		</div>
+
+	}
 }
