--- a/src/uLearn.Web/Views/Course/_SolutionControl.cshtml
+++ b/src/uLearn.Web/Views/Course/_SolutionControl.cshtml
@@ -2,25 +2,26 @@
 @using uLearn;
 @{
 	var slide = (ExerciseSlide)Model.Slide;
+	var exercise = slide.Exercise;
 	var address = Url.Action("AcceptedSolutions", "Course", new { courseId = Model.CourseId, slideIndex = Model.Slide.Index });
 	var action = Model.CanSkip ? "$('#ShowSolutionsAlert').modal('show')" : string.Format("window.location='{0}'", address);
 }
-<textarea id="secretCodeExercise" class='hide'>@slide.ExerciseInitialCode.EnsureEnoughLines(4)</textarea>
+<textarea id="secretCodeExercise" class='hide'>@exercise.ExerciseInitialCode.EnsureEnoughLines(4)</textarea>
 <div class="sphere-engine-tm">Powered by <a target="blank" href="http://sphere-engine.com">Sphere Engine™</a> and <a target="blank" href="http://codemirror.net/">CodeMirror</a></div>
-<textarea class='code code-exercise' data-lang="@slide.Lang">@(Model.LatestAcceptedSolution ?? slide.ExerciseInitialCode.EnsureEnoughLines(4))</textarea>
+<textarea class='code code-exercise' data-lang="@exercise.Lang">@(Model.LatestAcceptedSolution ?? exercise.ExerciseInitialCode.EnsureEnoughLines(4))</textarea>
 <script>
 	function cleanUserCode() {
 		var $secretCodeExercise = $('#secretCodeExercise');
 		$('.code-exercise')[0].codeMirrorEditor.setValue($secretCodeExercise.text());
 	}
-</script>
+	</script>
 <div class="solution-control btn-group ctrl-group">
 	<button type="button" class="run-solution-button btn btn-primary no-rounds"
 			data-url="@Url.Action("RunSolution", "Exercise", new {courseId = Model.CourseId, slideIndex = Model.Slide.Index})">
 		Run
 	</button>
 
-	@{ var e = ((ExerciseSlide)Model.Slide).HintsMd; }
+	@{ var e = ((ExerciseSlide)Model.Slide).Exercise.HintsMd; }
 	<button id="GetHintButton" type="button" class="btn btn-default hints-btn"
 			onclick="showHintForUser('@Model.CourseId','@Model.Slide.Index', '@e.Count')"
 			data-url="@Url.Action("UseHint", "Hint")">
