--- a/src/uLearn.Web/Views/Analytics/UsersProgress.cshtml
+++ b/src/uLearn.Web/Views/Analytics/UsersProgress.cshtml
@@ -1,5 +1,6 @@
 ﻿@using System.Globalization
 @using uLearn
+@using uLearn.Quizes
 @model uLearn.Web.Controllers.UserProgressViewModel
 
 <table class="tablesorter">
