move and split SlideBlock

--- a/src/uLearn.Web/Views/Course/SlideHtml.cshtml
+++ b/src/uLearn.Web/Views/Course/SlideHtml.cshtml
@@ -1,6 +1,6 @@
 ﻿@* Generator: MvcHelper GeneratePrettyNames: true DisableLinePragmas: true *@
 @using uLearn;
-@using uLearn.Web.Models;
+@using uLearn.Model.Blocks
 
 @helper Slide(BlockRenderContext context, int currentScore = 0)
 {
