--- a/src/uLearn.Web/Views/Shared/DisplayTemplates/ImageGaleryBlock.cshtml
+++ b/src/uLearn.Web/Views/Shared/DisplayTemplates/ImageGaleryBlock.cshtml
@@ -1,5 +1,5 @@
 ﻿@using uLearn
-@model uLearn.ImageGaleryBlock
+@model uLearn.Model.Blocks.ImageGaleryBlock
 <div class="flexslider">
 	<ul class="slides">
 		@{
