--- a/src/uLearn.Web/Views/Shared/DisplayTemplates/TexBlock.cshtml
+++ b/src/uLearn.Web/Views/Shared/DisplayTemplates/TexBlock.cshtml
@@ -1,5 +1,4 @@
-﻿@using uLearn
-@model TexBlock
+﻿@model uLearn.Model.Blocks.TexBlock
 @foreach (var tex in Model.TexLines)
 {
 	<div class="tex">\displaystyle @tex.Trim()</div>
