--- a/src/uLearn.Web/Views/Shared/DisplayTemplates/MdBlock.cshtml
+++ b/src/uLearn.Web/Views/Shared/DisplayTemplates/MdBlock.cshtml
@@ -1,3 +1,3 @@
 ﻿@using uLearn
-@model MdBlock
+@model uLearn.Model.Blocks.MdBlock
 @Html.Raw(Model.Markdown.RenderMd(((Slide)ViewBag.Slide).Info.SlideFile))
