--- a/src/uLearn.Web/Views/Shared/DisplayTemplates/YoutubeBlock.cshtml
+++ b/src/uLearn.Web/Views/Shared/DisplayTemplates/YoutubeBlock.cshtml
@@ -1,5 +1,4 @@
-﻿@using uLearn
-@model YoutubeBlock
+﻿@model uLearn.Model.Blocks.YoutubeBlock
 <div class="video-container">
 	<iframe class='embedded-video' width='864' height='480' src='//www.youtube.com/embed/@Model.VideoId' frameborder='0' allowfullscreen></iframe>
 </div>
