--- a/src/uLearn.Web/Views/Course/SlideHtml.cshtml
+++ b/src/uLearn.Web/Views/Course/SlideHtml.cshtml
@@ -83,20 +83,21 @@
 	if (data.ShowControls)
 	{
 		<div class="solution-control btn-group ctrl-group">
-			<button type="button" class="run-solution-button btn btn-primary no-rounds" data-url="@data.RunSolutionUrl">
+			<button type="button" class="run-solution-button btn btn-primary no-rounds @(data.IsLti ? "run-solution-button-lti" : "")" data-url="@data.RunSolutionUrl">
 				Run
 			</button>
 
 			@{ var e = ((ExerciseSlide)context.Slide).Exercise.HintsMd; }
-			<button id="GetHintButton" type="button" class="btn btn-default hints-btn" onclick="showHintForUser('@context.Course.Id', '@context.Slide.Index' , '@e.Count')" data-url="@data.GetHintUrl">
+			<button id="GetHintButton" type="button" class="btn btn-default hints-btn" onclick=" showHintForUser('@context.Course.Id', '@context.Slide.Index', '@e.Count') " data-url="@data.GetHintUrl">
 				Get hint
 			</button>
-
-			<button type="button" class="btn btn-default giveup-btn" onclick="@action">
-				Show solutions
-			</button>
-
-			<button type="button" class="btn btn-default reset-btn no-rounds" onclick="cleanUserCode()">
+			@if (!data.IsLti)
+			{
+				<button type="button" class="btn btn-default giveup-btn" onclick="@action">
+					Show solutions
+				</button>
+			}
+			<button type="button" class="btn btn-default reset-btn no-rounds" onclick=" cleanUserCode() ">
 				Reset
 			</button>
 		</div>
@@ -138,24 +139,26 @@
 		<div class="panel-group ctrl-group" id="hints-accordion">
 			<div id="hints-place"></div>
 		</div>
-
-		<div class="modal fade" id="ShowSolutionsAlert" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-			<div class="modal-dialog">
-				<div class="modal-content">
-					<div class="modal-header">
-						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-						<h4 class="modal-title">Внимание</h4>
-					</div>
-					<div class="modal-body">
-						<p>Вы потеряете возможность получить баллы за эту задачу, если продолжите.</p>
-					</div>
-					<div class="modal-footer">
-						<a class="btn btn-default" href="@data.AcceptedSolutionUrl">Продолжить</a>
-						<button type="button" class="btn btn-primary" data-dismiss="modal">Отмена</button>
+		@if (!data.IsLti)
+		 {
+			 <div class="modal fade" id="ShowSolutionsAlert" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+				<div class="modal-dialog">
+					<div class="modal-content">
+						<div class="modal-header">
+							<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+							<h4 class="modal-title">Внимание</h4>
+						</div>
+						<div class="modal-body">
+							<p>Вы потеряете возможность получить баллы за эту задачу, если продолжите.</p>
+						</div>
+						<div class="modal-footer">
+							<a class="btn btn-default" href="@data.AcceptedSolutionUrl">Продолжить</a>
+							<button type="button" class="btn btn-primary" data-dismiss="modal">Отмена</button>
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
+		 }
 	}
 	else
 	{
