removed unnecessary AcceptedSolutions header

--- a/src/uLearn.Web/Views/Course/AcceptedSolutions.cshtml
+++ b/src/uLearn.Web/Views/Course/AcceptedSolutions.cshtml
@@ -12,6 +12,7 @@
 	<div class="slide-container">
 		<div class="container body-content">
 			<div class="row">
+				<h1 class='page-header'>Решения</h1>
 				@AcceptedSolutionsHtml.AcceptedSolutions(Model)
 				@Html.Action("PrevNextButtons", "SlideNavigation", new { courseId = Model.CourseId, slideIndex = Model.Slide.Index, onSolutionsSlide = true })
 			</div>
