Added CsSandbox to uLearn

--- a/src/uLearn.Web/Views/Shared/_Layout.cshtml
+++ b/src/uLearn.Web/Views/Shared/_Layout.cshtml
@@ -37,6 +37,7 @@
 					{
 						<li>@Html.ActionLink("Пользователи", "List", "Account", new { role = LmsRoles.Admin }, null)</li>
 						<li>@Html.ActionLink("Статистика", "SystemStatistics", "Analytics")</li>
+						<li>@Html.ActionLink("CsSandbox", "Index", "Sandbox")</li>
 					}
 
 				</ul>
