--- a/src/uLearn.Web/Views/Course/SlideHtml.cshtml
+++ b/src/uLearn.Web/Views/Course/SlideHtml.cshtml
@@ -63,6 +63,61 @@
 	</div>
 }
 
+@helper CodeTextArea(string initialCode, string langId, string runSolutionUrl)
+{
+	<textarea id="secretCodeExercise" class="hide">@initialCode</textarea>
+	<div class="sphere-engine-tm">Powered by <a target="blank" href="http://sphere-engine.com">Sphere Engine™</a> and <a target="blank" href="http://codemirror.net/">CodeMirror</a></div>
+	<textarea class='code code-exercise' data-lang="@langId">@initialCode</textarea>
+	<script>
+		function cleanUserCode() {
+			var $secretCodeExercise = $('#secretCodeExercise');
+			$('.code-exercise')[0].codeMirrorEditor.setValue($secretCodeExercise.text());
+		}
+	</script>
+
+	<div class="solution-control btn-group ctrl-group">
+		<button type="button" class="run-solution-button btn btn-primary no-rounds" data-url="@runSolutionUrl">
+			Run
+		</button>
+		<button type="button" class="btn btn-default reset-btn no-rounds" onclick="cleanUserCode()">
+			Reset
+		</button>
+	</div>
+
+	<div class="run-result run-service-error">
+		<div class="run-verdict label-warning">Ошибка сервера :(</div>
+		<pre class="no-rounds"><code class="run-details"></code></pre>
+	</div>
+
+	<div class="run-result run-compile-error">
+		<div class="run-verdict label-danger">Ошибка компиляции</div>
+		<pre class="no-rounds"><code class="run-details"></code></pre>
+	</div>
+
+	<div class="run-result run-style-error">
+		<div class="run-verdict label-danger">Нарушение стилевых требований</div>
+		<pre class="no-rounds"><code class="run-details"></code></pre>
+		<div>
+			<small>В некоторых ситуациях стилевые проверки тут могут быть жестче, чем необходимо в реальной жизни.</small>
+		</div>
+	</div>
+
+	<div class="run-result run-wa">
+		<div class="run-verdict label-danger">Неверный результат</div>
+		<div class="diff-table tablesorter"></div>
+	</div>
+
+	<div class="run-result run-wa-no-diff">
+		<div class="run-verdict label-danger">Неверный результат</div>
+		<pre class="no-rounds"><code class="run-details"></code></pre>
+	</div>
+
+	<div class="run-result run-success">
+		<div class="run-verdict label-success clearfix">Успех!</div>
+		<pre class="no-rounds"><code class="run-details"></code></pre>
+	</div>
+}
+
 @helper Block(ExerciseBlock block, BlockRenderContext context)
 {
 	ExerciseBlockData data = context.GetBlockData(block) ?? new ExerciseBlockData();
@@ -84,7 +139,7 @@
 			</button>
 
 			@{ var e = ((ExerciseSlide)context.Slide).Exercise.HintsMd; }
-			<button id="GetHintButton" type="button" class="btn btn-default hints-btn" onclick=" showHintForUser('@context.Course.Id', '@context.Slide.Index', '@e.Count') " data-url="@data.GetHintUrl">
+			<button id="GetHintButton" type="button" class="btn btn-default hints-btn" onclick=" showhintforuser('@context.Course.Id', '@context.Slide.Index' , '@e.Count' ) " data-url=" @data.GetHintUrl ">
 				Get hint
 			</button>
 			@if (!data.IsLti)
@@ -155,23 +210,23 @@
 	}
 }
 
-@helper Alert(ExerciseBlockData data)
+		@helper Alert(ExerciseBlockData data)
 {
-	<div class="modal fade" id="ShowSolutionsAlert" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-					<h4 class="modal-title">Внимание</h4>
-				</div>
-				<div class="modal-body">
-					<p>Вы потеряете возможность получить баллы за эту задачу, если продолжите.</p>
-				</div>
-				<div class="modal-footer">
-					<a class="btn btn-default" href="@data.AcceptedSolutionUrl">Продолжить</a>
-					<button type="button" class="btn btn-primary" data-dismiss="modal">Отмена</button>
+		<div class="modal fade" id="ShowSolutionsAlert" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+						<h4 class="modal-title">Внимание</h4>
+					</div>
+					<div class="modal-body">
+						<p>Вы потеряете возможность получить баллы за эту задачу, если продолжите.</p>
+					</div>
+					<div class="modal-footer">
+						<a class="btn btn-default" href="@data.AcceptedSolutionUrl">Продолжить</a>
+						<button type="button" class="btn btn-primary" data-dismiss="modal">Отмена</button>
+					</div>
 				</div>
 			</div>
 		</div>
-	</div>
 }
