--- a/src/uLearn.Web/Views/Sandbox/RunCode.cshtml
+++ b/src/uLearn.Web/Views/Sandbox/RunCode.cshtml
@@ -4,7 +4,7 @@
 	ViewBag.Title = "Run code";
 }
 
-<div class="jumbotron">
+<div class="container">
 	@if (User.IsInRole(LmsRoles.Admin) || User.IsInRole(LmsRoles.Instructor))
 	{
 		@SlideHtml.CodeTextArea(@"using System;
